# ctg-chatbot-vanna

./: .env.example  .env.render.template  .gitignore  DATABASE_CONFIG_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_LOADING.md  QUICK_REFERENCE.md  README_typical_questions.md  STEPIFIED_PIPELINE.md  USAGE_TRACKING.md  app.py  examples_stepified_usage.sh  load_to_render_postgres.py  load_to_supabase.py  pyproject.toml  requirements.txt  test_questions.py  test_render_config.py  test_usage_tracking.py  typical_questions.txt  vanna_calls.py
.streamlit/: secrets.toml.template
chroma_db/: chroma.sqlite3
fetch-CTs/: test.py
src/: vanna_calls.py
src/utils/: db_connection.py  get_embedding.py  logging_config.py  usage_tracker.py  verify_embeddings.py
