[project]
name = "elevio-ctg-chatbot-vanna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "databricks>=0.2",
    "databricks-sql-connector>=4.1.2",
    "ipykernel>=6.29.5",
    "openai>=1.90.0",
    "openpyxl>=3.1.5",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.46.0",
    "supabase>=2.16.0",
    "vanna>=0.7.9",
]
